--- a/src/sphere/CMakeLists.txt
+++ b/src/sphere/CMakeLists.txt
@@ -2,14 +2,14 @@ set(INSTALLED_TARGETS_LIST "")
 
 # make sure that this was not executed so far
 if (NOT TARGET sphere)
-    set(sphere_src_files SrcFile1.cpp 
-                         SrcFile2.cpp 
-                         SrcFile3.cpp 
+    set(sphere_src_files SphereShapes.cpp 
+                         Scene.cpp  
     )
     add_library(sphere ${sphere_src_files})
     
     # specify compiler options that are valid in any case
-    target_include_directories(sphere PUBLIC $<BUILD_INTERFACE:${sphere_SOURCE_DIR}/src>)
+    target_include_directories(sphere PUBLIC $<BUILD_INTERFACE:${sphere_SOURCE_DIR}/src> 
+                                      PUBLIC "${sphere_SOURCE_DIR}/libs/json/single_include/nlohmann/")
     target_compile_options(sphere PRIVATE -O3 PRIVATE -march=native)
     target_compile_features(sphere PUBLIC cxx_std_17)
     target_link_libraries(sphere PRIVATE nlohmann_json::nlohmann_json)
