--- a/src/sphere/CMakeLists.txt
+++ b/src/sphere/CMakeLists.txt
@@ -4,6 +4,8 @@ set(INSTALLED_TARGETS_LIST "")
 if (NOT TARGET sphere)
     set(sphere_src_files SphereShapes.cpp 
                          Scene.cpp  
+                         ImageClasses.cpp
+                         Renderer.cpp
     )
     add_library(sphere ${sphere_src_files})
     
