--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,16 +1,28 @@
 # create executable for the sphere_benchmarks
-set(sphere_benchmark_executables "sphere_benchmark")
+if (SPHERE_WITH_BENCHMARKS AND NOT SPHERE_WITH_MICROBENCHMARKS)
+    set(sphere_benchmark_executables "sphere_benchmark")
+elseif (SPHERE_WITH_MICROBENCHMARKS)
+    set(sphere_benchmark_executables "sphere_microbenchmark")
+endif()
 
 foreach(exec ${sphere_benchmark_executables})
-    # in this executable, the SPHERE_WITH_BENCHMARKS is set anyway
-    # but we might also have to set the BENCHMARKS_COUNT_OP macro
+    # add executable to the queue
     add_executable(${exec} "${exec}.cpp")
-    if (BENCHMARKS_COUNT_OP)
-        target_compile_definitions(${exec} PUBLIC SPHERE_WITH_BENCHMARKS BENCHMARKS_COUNT_OP)
-    else()
-        target_compile_definitions(${exec} PUBLIC SPHERE_WITH_BENCHMARKS)
+
+    # adapt compile definitions and link libraries depending on whether the executable
+    # is for benchmarking or microbenchmarking
+    if (SPHERE_WITH_BENCHMARKS AND NOT SPHERE_WITH_MICROBENCHMARKS)
+        if (BENCHMARKS_COUNT_OP)
+            target_compile_definitions(${exec} PUBLIC SPHERE_WITH_BENCHMARKS BENCHMARKS_COUNT_OP)
+        else()
+            target_compile_definitions(${exec} PUBLIC SPHERE_WITH_BENCHMARKS)
+        endif()
+        target_link_libraries(${exec} PRIVATE sphere cxxopts)
+        target_include_directories(${exec} PUBLIC "${sphere_SOURCE_DIR}/libs/cxxopts/include/")
+
+    elseif (SPHERE_WITH_MICROBENCHMARKS)
+        target_compile_definitions(${exec} PUBLIC SPHERE_WITH_MICROBENCHMARKS)
+        target_link_libraries(${exec} PRIVATE sphere)
     endif()
-    target_link_libraries(${exec} PRIVATE sphere cxxopts)
-    target_include_directories(${exec} PUBLIC "${sphere_SOURCE_DIR}/libs/cxxopts/include/")
     
 endforeach()
